--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   rxdart: ^0.21.0
+  meta: ^1.1.6
+  flutter_bloc: ^0.10.1
 
 dev_dependencies:
   flutter_test:
